--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,8 @@ body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     background-color: #121212;
     color: #e0e0e0;
-    margin: 0;
+    margin: auto;
+    max-width: 1000px;
     padding: 20px;
 }
 
