--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,14 +1,26 @@
 <!doctype html>
-<html>
+<html lang="en">
     <head>
-        <title>{{ title }}</title>
+        <meta charset="UTF-8" />
         <link
             rel="stylesheet"
             href="{{ url_for('static', filename='style.css') }}"
         />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-    </head>
-    <body>
+        <meta
+            name="description"
+            content="A photography portfolio by {{ author }}."
+        />
+        <meta name="keywords" content="photography, portfolio, gallery" />
+        <meta name="author" content="{{ author }}" />
+        <meta property="og:title" content="{{ author }}" />
+        <meta
+            property="og:description"
+            content="A photography portfolio by {{ author }}."
+        />
+        <meta property="og:image" content="{{ cover_img_url }}" />
+        <meta property="og:url" content="{{ base_url }}" />
+        <meta property="og:type" content="website" />
         <script>
             function layout() {
                 const isMobile =
@@ -39,9 +51,10 @@
             document.addEventListener("DOMContentLoaded", layout);
             window.addEventListener("resize", layout);
         </script>
-
+    </head>
+    <body>
         <h1>
-            {{ title }} {% if ig_link %}
+            {{ author }} {% if ig_link %}
             <a href="{{ ig_link }}" target="_blank" class="ig-link">
                 <img
                     src="{{ url_for('static', filename='ig.svg') }}"
